Changes
=======

0.7.5 ()
------------------
- better handling of connection errors (#118)

0.7.4 (2022-09-28)
------------------
- bc2pg - option --no_timestamp now recognized (#116)
- bc2pg - preserve floating point data (#117)

0.7.3 (2022-09-26)
------------------
- bc2pg - fully handle geometries with Z values (#114) and add a test to check

0.7.2 (2022-09-26)
------------------
- bc2pg - handle geometries with Z values (#114)

0.7.1 (2022-09-26)
------------------
- bc2pg - add missing --sortby option
- bc2pg - better --append checks

0.7.0 (2022-07-18)
------------------
- bcdata.define_request function renamed to define_requests, returns list of
  parsed urls rather than a list of request parameter dictionaries  - this makes
  it easy to interactively generate request urls for geopandas/debugging/other
- new bc2pg Python module/function
    + general purpose loading tool
    + output table column types and comments are as specified in BC Data
      Catalogue API
    + data loads are via sqlalchemy/geopandas
    + schema_only option included for creation of empty tables
    + all features are promoted to multipart
    + BC Albers only, no re-projection support
- updated bc2pg command line tool
    + uses new bc2pg Python function (no longer an ogr2ogr wrapper)
    + fid option renamed to primary_key
    + new option --schema_only
    + options removed: bounds,bounds_crs,max_workers,dim,promote_to_multi,makevalid
- added a count option to most functions/commands for downloading only n records

0.6.3 (2022-06-08)
------------------
- add --max_workers option to bcdata cat
- improve logging with bcdata cat

0.6.2 (2022-06-08)
------------------
- fix bc2pg append mode and primary key handling (#104)
- bc2pg --append now requires --fid
- add bc2pg tests (#43)
- require local test database for running tests

0.6.1 (2022-04-26)
------------------
- enable configuration of cache file location via $BCDATA_CACHE environment variable (#99)

0.6.0 (2022-04-26)