@@ -4,6 +4,8 @@ Changes
 0.7.5 ()
 ------------------
 - better handling of connection errors (#118)
+- correctly handle empty geodataframes (#121)
+
 
 0.7.4 (2022-09-28)
 ------------------
